--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 
 <body class="bg-gray-900">
 
-    <!-- Top Right Sign In Button -->
-    <div class="fixed top-4 right-4 z-50">
-        <a href="https://nextjs-ai-chatbot-omega-murex-86.vercel.app/"
-            class="inline-flex items-center justify-center rounded-md px-4 py-2 text-sm font-medium bg-gray-800 text-white hover:bg-gray-700 transition-colors">
-            Sign In
-        </a>
-    </div>
+    <!-- Header with Log In Button -->
+    <header class="fixed top-0 right-0 left-0 lg:left-72 z-50 flex justify-end p-4"></header>
+    <a href="https://nextjs-ai-chatbot-omega-murex-86.vercel.app/"
+        class="inline-flex items-center justify-center rounded-md px-4 py-2 text-sm font-medium bg-gray-800 text-white hover:bg-gray-700 transition-colors">
+        Log In
+    </a>
+    </header>
 
     <!-- Desktop Sidebar Navigation -->
     <div class="hidden lg:fixed lg:inset-y-0 lg:z-50 lg:flex lg:w-72 lg:flex-col">
@@ -168,8 +168,8 @@
     </div>
 
     <!-- Main Content -->
-    <div class="lg:pl-72"></div>
-    <main>
+    <div class="lg:pl-72">
+        <main></main>
         <!-- Globe Section -->
         <section class="relative" id="globe-section">
             <div id="globe-container"></div>
@@ -191,12 +191,13 @@
                                 style="left: 24px; top: 50%; transform: translateY(-50%); display: none;"></span>
                         </div>
                         <button type="submit" id="send-button"
-                            class="bg-gray-700 text-gray-500 font-semibold p-4 rounded-xl transition-all flex items-center justify-center cursor-not-allowed" disabled></button>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
-                                stroke="currentColor" class="w-6 h-6">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18" />
-                            </svg>
+                            class="bg-gray-700 text-gray-500 font-semibold p-4 rounded-xl transition-all flex items-center justify-center cursor-not-allowed"
+                            disabled></button>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18" />
+                        </svg>
                         </button>
                     </div>
                 </form>
@@ -421,52 +422,52 @@
                 </div>
             </div>
         </div>
-    </main>
+        </main>
 
-    <!-- Footer -->
-    <footer class="bg-gray-900">
-        <div class="mx-auto max-w-7xl px-6 py-16 lg:px-8">
-            <div class="grid grid-cols-1 gap-8 lg:grid-cols-4">
-                <div class="lg:col-span-2">
-                    <div class="flex items-center space-x-2 mb-6">
-                        <span class="text-3xl font-bold text-white">ChabadAI</span>
+        <!-- Footer -->
+        <footer class="bg-gray-900">
+            <div class="mx-auto max-w-7xl px-6 py-16 lg:px-8">
+                <div class="grid grid-cols-1 gap-8 lg:grid-cols-4">
+                    <div class="lg:col-span-2">
+                        <div class="flex items-center space-x-2 mb-6">
+                            <span class="text-3xl font-bold text-white">ChabadAI</span>
+                        </div>
+                        <p class="text-gray-300 text-lg leading-7 mb-6 max-w-md">
+                            Empowering Jewish learning through artificial intelligence. Experience Torah study like
+                            never before with our advanced AI platform.
+                        </p>
                     </div>
-                    <p class="text-gray-300 text-lg leading-7 mb-6 max-w-md">
-                        Empowering Jewish learning through artificial intelligence. Experience Torah study like
-                        never before with our advanced AI platform.
-                    </p>
+                    <div>
+                        <h3 class="text-sm font-semibold leading-6 text-white mb-4">Product</h3>
+                        <ul class="space-y-3">
+                            <li><a href="#" class="text-gray-300 hover:text-white text-sm">Features</a></li>
+                            <li><a href="#" class="text-gray-300 hover:text-white text-sm">Torah Study</a></li>
+                            <li><a href="#" class="text-gray-300 hover:text-white text-sm">Halacha Guide</a></li>
+                            <li><a href="#" class="text-gray-300 hover:text-white text-sm">Community</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3 class="text-sm font-semibold leading-6 text-white mb-4">Support</h3>
+                        <ul class="space-y-3">
+                            <li><a href="#" class="text-gray-300 hover:text-white text-sm">Help Center</a></li>
+                            <li><a href="#" class="text-gray-300 hover:text-white text-sm">Documentation</a></li>
+                            <li><a href="#" class="text-gray-300 hover:text-white text-sm">Contact Us</a></li>
+                            <li><a href="#" class="text-gray-300 hover:text-white text-sm">Blog</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div>
-                    <h3 class="text-sm font-semibold leading-6 text-white mb-4">Product</h3>
-                    <ul class="space-y-3">
-                        <li><a href="#" class="text-gray-300 hover:text-white text-sm">Features</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-white text-sm">Torah Study</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-white text-sm">Halacha Guide</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-white text-sm">Community</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3 class="text-sm font-semibold leading-6 text-white mb-4">Support</h3>
-                    <ul class="space-y-3">
-                        <li><a href="#" class="text-gray-300 hover:text-white text-sm">Help Center</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-white text-sm">Documentation</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-white text-sm">Contact Us</a></li>
-                        <li><a href="#" class="text-gray-300 hover:text-white text-sm">Blog</a></li>
-                    </ul>
+                <div class="mt-16 pt-8 border-t border-gray-800">
+                    <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
+                        <div class="flex flex-wrap justify-center md:justify-start gap-6 text-sm text-gray-400">
+                            <a href="#" class="hover:text-white">Privacy Policy</a>
+                            <a href="#" class="hover:text-white">Terms of Service</a>
+                            <a href="#" class="hover:text-white">Cookie Policy</a>
+                        </div>
+                        <p class="text-sm text-gray-400">&copy; 2024 ChabadAI. All rights reserved.</p>
+                    </div>
                 </div>
             </div>
-            <div class="mt-16 pt-8 border-t border-gray-800">
-                <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
-                    <div class="flex flex-wrap justify-center md:justify-start gap-6 text-sm text-gray-400">
-                        <a href="#" class="hover:text-white">Privacy Policy</a>
-                        <a href="#" class="hover:text-white">Terms of Service</a>
-                        <a href="#" class="hover:text-white">Cookie Policy</a>
-                    </div>
-                    <p class="text-sm text-gray-400">&copy; 2024 ChabadAI. All rights reserved.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+        </footer>
     </div>
 
     <script>
@@ -714,7 +715,7 @@
 
             // Show cursor always, hide only when user types
             const sendButton = document.getElementById('send-button');
-            
+
             if (chatInputField && cursor) {
                 // Show cursor by default
                 cursor.style.display = 'inline-block';
