--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
             transform: scale(1.1);
         }
 
-        /* Blinking cursor with purple glow */
+        /* Purple text cursor for input field */
+        #chat-input-field {
+            caret-color: rgba(157, 78, 221, 0.9);
+        }
+
+        /* Blinking cursor with purple glow - only show when empty */
         .cursor-blink {
             display: inline-block;
             width: 2px;
@@ -211,7 +216,7 @@
                             <div class="flex-1 relative">
                                 <input id="chat-input-field" type="text"
                                     placeholder="How can I help you with your shlichus today?"
-                                    class="w-full bg-gray-900/50 text-white placeholder-gray-400 border border-gray-600 rounded-xl px-6 py-4 text-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
+                                    class="w-full bg-gray-900/50 text-white placeholder-gray-400 border border-gray-600 rounded-xl px-6 py-4 text-lg focus:outline-none focus:ring-2 focus:ring-white" />
                                 <span id="cursor" class="cursor-blink absolute"
                                     style="left: 24px; top: 50%; transform: translateY(-50%); display: none;"></span>
                             </div>
