working on fixing mobile keyboard issue, and more ui updates

--- a/index.html
+++ b/index.html
@@ -66,32 +66,7 @@
             caret-color: rgba(157, 78, 221, 0.9);
         }
 
-        /* Blinking cursor with purple glow - only show when empty */
-        .cursor-blink {
-            display: inline-block;
-            width: 2px;
-            height: 1.2em;
-            background-color: rgba(157, 78, 221, 0.9);
-            margin-left: 2px;
-            animation: blink 1s infinite;
-            box-shadow: 0 0 8px rgba(157, 78, 221, 0.8), 0 0 12px rgba(157, 78, 221, 0.5);
-            vertical-align: middle;
-            position: relative;
-            top: -2px;
-        }
 
-        @keyframes blink {
-
-            0%,
-            49% {
-                opacity: 1;
-            }
-
-            50%,
-            100% {
-                opacity: 0;
-            }
-        }
 
         /* Slight white glow behind chat box */
         #chat-form {
@@ -215,13 +190,11 @@
                         <div class="flex items-center gap-4 relative">
                             <div class="flex-1 relative">
                                 <input id="chat-input-field" type="text" placeholder=""
-                                    class="w-full bg-gray-900/50 text-white placeholder-gray-400 border border-gray-600 rounded-xl px-6 py-4 text-lg focus:outline-none focus:ring-2 focus:ring-white" />
+                                    class="w-full bg-gray-900/50 text-white placeholder-gray-400 border border-gray-600 rounded-xl px-6 py-4 text-lg focus:outline-none focus:ring-2 focus:ring-gray-500" />
                                 <div id="custom-placeholder"
                                     class="absolute left-6 top-1/2 -translate-y-1/2 text-gray-400 text-lg pointer-events-none transition-opacity duration-400">
                                     How can I help you with your shlichus today?
                                 </div>
-                                <span id="cursor" class="cursor-blink absolute"
-                                    style="left: 24px; top: 50%; transform: translateY(-50%); display: none;"></span>
                             </div>
                             <button type="submit" id="send-button"
                                 class="bg-gray-700 text-gray-500 font-semibold p-4 rounded-xl transition-all flex items-center justify-center cursor-not-allowed"
@@ -708,22 +681,19 @@
             }
 
             // Start rotating after chat input appears, then every 3 seconds
-            setTimeout(() => {
-                placeholderInterval = setInterval(rotatePlaceholder, 3000);
-            }, 2000);
+            // Don't start rotation on mobile to avoid keyboard issues
+            if (window.innerWidth >= 1024) {
+                setTimeout(() => {
+                    placeholderInterval = setInterval(rotatePlaceholder, 3000);
+                }, 2000);
+            }
 
             // Handle chat form submission
             const chatForm = document.getElementById('chat-form');
             const chatInputField = document.getElementById('chat-input-field');
-            const cursor = document.getElementById('cursor');
-
-            // Show cursor always, hide only when user types
             const sendButton = document.getElementById('send-button');
 
-            if (chatInputField && cursor && customPlaceholder) {
-                // Show cursor by default
-                cursor.style.display = 'inline-block';
-
+            if (chatInputField && customPlaceholder) {
                 // Hide custom placeholder when user focuses or types
                 chatInputField.addEventListener('focus', () => {
                     if (chatInputField.value === '') {
@@ -739,7 +709,6 @@
 
                 chatInputField.addEventListener('input', () => {
                     if (chatInputField.value === '') {
-                        cursor.style.display = 'inline-block';
                         customPlaceholder.style.display = 'block';
                         // Resume placeholder rotation when input is cleared
                         if (!placeholderInterval) {
@@ -752,7 +721,6 @@
                             sendButton.classList.add('bg-gray-700', 'text-gray-500', 'cursor-not-allowed');
                         }
                     } else {
-                        cursor.style.display = 'none';
                         customPlaceholder.style.display = 'none';
                         // Stop placeholder rotation when user types
                         if (placeholderInterval) {
